@@ -32,6 +32,10 @@ public class Mnemonics {
      * Mnemonics should be unique at a given point of the navigation. They are ordered by menu.
      */
 
+    public static final int SPEED_1 = KeyEvent.VK_1;
+
+    public static final int SPEED_10 = KeyEvent.VK_2;
+
 
     /* File menu */
 
